--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../build/windows/hs-windows-x64.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../build/windows/hs-windows-x86.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -116,7 +116,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../build/linux/hs-linux-x64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -141,7 +141,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../build/linux/hs-linux-x86"
 script_export_mode=1
 script_encryption_key=""
 
@@ -166,7 +166,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../build/macos/hs-macosx"
 script_export_mode=1
 script_encryption_key=""
 
