Setting up actions to publish to itch.io

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="HTML5"
+name="hs-html"
 platform="HTML5"
 runnable=true
 custom_features=""
@@ -25,7 +25,7 @@ html/experimental_virtual_keyboard=false
 
 [preset.1]
 
-name="Windows (64bit)"
+name="hs-windows-64"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
@@ -67,7 +67,7 @@ application/trademarks=""
 
 [preset.2]
 
-name="Windows (32bit)"
+name="hs-windows-32"
 platform="Windows Desktop"
 runnable=false
 custom_features=""
@@ -109,7 +109,7 @@ application/trademarks=""
 
 [preset.3]
 
-name="Linux/X11 (64bit)"
+name="hs-linux-64"
 platform="Linux/X11"
 runnable=true
 custom_features=""
@@ -134,7 +134,7 @@ texture_format/no_bptc_fallbacks=true
 
 [preset.4]
 
-name="Linux/X11 (32bit)"
+name="hs-linux-32"
 platform="Linux/X11"
 runnable=false
 custom_features=""
@@ -159,7 +159,7 @@ texture_format/no_bptc_fallbacks=true
 
 [preset.5]
 
-name="Mac OSX"
+name="hs-macosx"
 platform="Mac OSX"
 runnable=true
 custom_features=""
