Added game icons for all platforms

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -25,7 +25,7 @@ html/experimental_virtual_keyboard=false
 
 [preset.1]
 
-name="hs-windows-64"
+name="hs-windows-x64"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
@@ -56,7 +56,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
 application/company_name="Cosmic Effect"
@@ -67,7 +67,7 @@ application/trademarks=""
 
 [preset.2]
 
-name="hs-windows-32"
+name="hs-windows-x86"
 platform="Windows Desktop"
 runnable=false
 custom_features=""
@@ -98,7 +98,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
 application/company_name="Cosmic Effect"
@@ -109,7 +109,7 @@ application/trademarks=""
 
 [preset.3]
 
-name="hs-linux-64"
+name="hs-linux-x64"
 platform="Linux/X11"
 runnable=true
 custom_features=""
@@ -134,7 +134,7 @@ texture_format/no_bptc_fallbacks=true
 
 [preset.4]
 
-name="hs-linux-32"
+name="hs-linux-x86"
 platform="Linux/X11"
 runnable=false
 custom_features=""
@@ -176,7 +176,7 @@ custom_template/debug=""
 custom_template/release=""
 application/name="Hungry Snake"
 application/info="GoGodot Jam Game"
-application/icon=""
+application/icon="res://icon.icns"
 application/identifier="br.com.cosmiceffect.hungrysnake"
 application/signature=""
 application/short_version="1.0"
