--- a/.github/workflows/publish-to-itchio.yml
+++ b/.github/workflows/publish-to-itchio.yml
@@ -3,25 +3,44 @@ on:
     types: [published]
 
 jobs:
-  # release_windows:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: download Windows
-  #       id: download-windows
-  #       uses: dsaltares/fetch-gh-release-asset@master
-  #       with:
-  #         version: "latest"
-  #         file: corge-windows.zip
-  #         token: "${{ secrets.GH_CREDENTIALS }}"
-  #     - name: deploy to itch.io (Windows)
-  #       uses: josephbmanley/butler-publish-itchio-action@master
-  #       env:
-  #         BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
-  #         CHANNEL: windows
-  #         ITCH_GAME: corg-e
-  #         ITCH_USER: bitbrain
-  #         PACKAGE: corge-windows.zip
-  #         VERSION: ${{ steps.download-windows.outputs.version }}
+  release_windows_x64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: download Windows x64
+        id: download-windows-x64
+        uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          version: "latest"
+          file: hs-windows-x64.zip
+          token: "${{ secrets.GH_CREDENTIALS }}"
+      - name: deploy to itch.io (Windows 64bit)
+        uses: josephbmanley/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
+          CHANNEL: windows
+          ITCH_GAME: hungry-snake
+          ITCH_USER: dancovich
+          PACKAGE: hs-windows-x64.zip
+          VERSION: ${{ steps.download-windows-x64.outputs.version }}
+  release_windows_x86:
+    runs-on: ubuntu-latest
+    steps:
+      - name: download Windows x86
+        id: download-windows-x86
+        uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          version: "latest"
+          file: hs-windows-x86.zip
+          token: "${{ secrets.GH_CREDENTIALS }}"
+      - name: deploy to itch.io (Windows 64bit)
+        uses: josephbmanley/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
+          CHANNEL: windows
+          ITCH_GAME: hungry-snake
+          ITCH_USER: dancovich
+          PACKAGE: hs-windows-x86.zip
+          VERSION: ${{ steps.download-windows-x86.outputs.version }}
   # release_macos:
   #   runs-on: ubuntu-latest
   #   steps:
